--- a/client.html
+++ b/client.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client Profile</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="/js/client.js"></script>
+    <script defer src="client.js"></script>
 </head>
 <body class="bg-gray-100">
 
     <!-- Navigation Bar -->
     <div id="navbar-placeholder"></div>
-    <script src="/js/navbar.js"></script>
+    <script src="navbar.js"></script>
 
     <!-- Profile Section -->
     <section class="mt-20 max-w-5xl mx-auto bg-white rounded-lg shadow-lg p-6">
         <div class="flex justify-between items-center">
             <div class="flex items-center space-x-6">
-                <img src="/images/bobby_lee.jpg" alt="Bobby Lee" class="w-24 h-24 rounded-full shadow-md">
+                <img src="bobby_lee.jpg" alt="Bobby Lee" class="w-24 h-24 rounded-full shadow-md">
                 <div>
                     <h1 class="text-3xl font-semibold">Bobby Lee</h1>
                     <p class="text-gray-600">Unit 7, 123 Maple Avenue, Vancouver, BC, V6H 1A1</p>
@@ -52,7 +52,7 @@
                 <p><strong>Transmission:</strong> 8-Speed Automatic</p>
                 <p><strong>Drivetrain:</strong> All-Wheel Drive (AWD)</p>
             </div>
-            <img id="vehicle-image" src="/images/dodgedurango.avif" alt="Dodge Durango" class="w-1/3 rounded-lg shadow-lg">
+            <img id="vehicle-image" src="dodgedurango.avif" alt="Dodge Durango" class="w-1/3 rounded-lg shadow-lg">
         </div>
     </section>
 
@@ -150,7 +150,7 @@
                 engine: "5.7L V8 HEMI MDS VVT",
                 transmission: "8-Speed Automatic",
                 drivetrain: "All-Wheel Drive (AWD)",
-                image: "/images/durango.jpg"
+                image: "durango.jpg"
             },
             mustang: {
                 make: "Ford",
@@ -162,7 +162,7 @@
                 engine: "5.0L V8 Ti-VCT",
                 transmission: "6-Speed Manual",
                 drivetrain: "Rear-Wheel Drive (RWD)",
-                image: "/images/mustang.webp"
+                image: "mustang.webp"
             }
         };
 
@@ -189,7 +189,7 @@
 
     <!-- Load Mailing List -->
 <div id="mailing-list-placeholder"></div>
-<script src="/js/mailing-list.js"></script>
+<script src="mailing-list.js"></script>
 
 </body>
 </html>
