--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/contact.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="contact.js" defer></script>
 </head>
 <body>
 
     <!-- Navigation Bar -->
     <div id="navbar-placeholder"></div>
-    <script src="/js/navbar.js"></script>
+    <script src="navbar.js"></script>
 
     <!-- Contact Section -->
     <section id="contact-section">
@@ -19,7 +19,7 @@
         <div class="contact-container">
             <!-- Image -->
             <div class="contact-image">
-                <img src="/images/contact.jpg" alt="Mechanic at Work">
+                <img src="contact.jpg" alt="Mechanic at Work">
             </div>
             <!-- Contact Form -->
             <div class="contact-form">
@@ -39,11 +39,11 @@
 
         <!-- Load Customer Reviews -->
 <div id="reviews-placeholder"></div>
-<script src="/js/reviews.js"></script>
+<script src="reviews.js"></script>
 
 <!-- Load Mailing List -->
 <div id="mailing-list-placeholder"></div>
-<script src="/js/mailing-list.js"></script>
+<script src="mailing-list.js"></script>
 
 </body>
 </html>
