--- a/interior_repair.html
+++ b/interior_repair.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service Details - Interior Repair</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/js/script.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body class="service-details-page bg-gray-100">  
 
     <!-- Navigation Bar -->
     <div id="navbar-placeholder"></div>
-    <script src="/js/navbar.js"></script>
+    <script src="navbar.js"></script>
 
     <!-- Service Details Section -->
     <section id="service-details" class="mt-20 max-w-6xl mx-auto bg-white rounded-lg shadow-lg p-6">
         <div class="service-container flex flex-col md:flex-row gap-6">
             <!-- Left: Service Image -->
             <div class="service-image flex-1">
-                <img src="/images/interior_repair.jpg" alt="Interior Repair" class="rounded-lg shadow-md">
+                <img src="interior_repair.jpg" alt="Interior Repair" class="rounded-lg shadow-md">
             </div>
 
             <!-- Right: Service Info -->
@@ -95,11 +95,11 @@
 
     <!-- Load Customer Reviews -->
     <div id="reviews-placeholder"></div>
-    <script src="/js/reviews.js"></script>
+    <script src="reviews.js"></script>
 
     <!-- Load Mailing List -->
     <div id="mailing-list-placeholder"></div>
-    <script src="/js/mailing-list.js"></script>
+    <script src="mailing-list.js"></script>
 
     <!-- JavaScript for Pop-up Functionality -->
     <script>
