--- a/location.html
+++ b/location.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Us - Reema's Autobody Shop</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/navbar.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="navbar.js" defer></script>
 </head>
 <body>
 
@@ -63,11 +63,11 @@
 
         <!-- Load Customer Reviews -->
 <div id="reviews-placeholder"></div>
-<script src="/js/reviews.js"></script>
+<script src="reviews.js"></script>
 
 <!-- Load Mailing List -->
 <div id="mailing-list-placeholder"></div>
-<script src="/js/mailing-list.js"></script>
+<script src="mailing-list.js"></script>
 
 </body>
 </html>
