--- a/mailing-list.html
+++ b/mailing-list.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Our Mailing List</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/mailing-list.js" defer></script>
+    <script src="mailing-list.js" defer></script>
 </head>
 <body>
 
     <!-- Load Navigation -->
     <div id="navbar-placeholder"></div>
-    <script src="/js/navbar.js"></script>
+    <script src="navbar.js"></script>
 
     <!-- Mailing List Section -->
     <section id="mailing-list">
