--- a/navbar.html
+++ b/navbar.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation Bar</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
         <div class="nav-container">
             <ul class="nav-links">
-                <li><a href="/index.html#services" class="nav-item">Services</a></li>
+                <li><a href="index.html#services" class="nav-item">Services</a></li>
                 <li><a href="index.html#team-placeholder" class="nav-item">Meet the Team</a></li>
                 <li class="nav-logo">
-                    <a href="/index.html"><img src="/images/logo.jpg" alt="Company Logo"></a>
+                    <a href="index.html"><img src="logo.jpg" alt="Company Logo"></a>
                 </li>
-                <li><a href="/html/contact.html" class="nav-item">Contact Us</a></li>
-                <li><a href="/html/location.html" class="book-btn nav-item">Book Today</a></li>
-                <li><a href="/html/client.html" class="profile-icon">
-                    <img src="/images/profilelogo.png" alt="Profile">
+                <li><a href="contact.html" class="nav-item">Contact Us</a></li>
+                <li><a href="location.html" class="book-btn nav-item">Book Today</a></li>
+                <li><a href="client.html" class="profile-icon">
+                    <img src="profilelogo.png" alt="Profile">
                 </a></li>
             </ul>
         </div>
