--- a/reviews.html
+++ b/reviews.html
@@ -7,7 +7,7 @@
             <p class="stars">★★★★★</p>
             <p>"Fast! Tech Tony was quick and helpful! Was out in 15 minutes :)"</p>
             <div class="reviewer">
-                <img src="/images/bobby_lee.jpg" alt="Bobby Lee">
+                <img src="bobby_lee.jpg" alt="Bobby Lee">
                 <p>Bobby Lee - 05/07/2024</p>
             </div>
         </div>
@@ -16,7 +16,7 @@
             <p class="stars">★★★★★</p>
             <p>"Best auto service! My car looks brand new."</p>
             <div class="reviewer">
-                <img src="/images/samantha.jpg" alt="Samantha P.">
+                <img src="samantha.jpg" alt="Samantha P.">
                 <p>Samantha P. - 03/15/2024</p>
             </div>
         </div>
@@ -25,7 +25,7 @@
             <p class="stars">★★★★☆</p>
             <p>"Great job on my car, but it took a little longer than expected."</p>
             <div class="reviewer">
-                <img src="/images/jon_doe.jpg" alt="John Doe">
+                <img src="jon_doe.jpg" alt="John Doe">
                 <p>John Doe - 02/22/2024</p>
             </div>
         </div>
