--- a/team.html
+++ b/team.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet the Team</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/team.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="team.js" defer></script>
 </head>
 <body>
 
@@ -19,19 +19,19 @@
                 <div class="carousel-container">
                     <div class="team-wrapper">
                         <div class="team-member">
-                            <img src="/images/team1.jpg" alt="John Doe">
+                            <img src="team1.jpg" alt="John Doe">
                             <h3>John Doe</h3>
                             <p>Collision Repair Specialist</p>
                         </div>
                         
                         <div class="team-member">
-                            <img src="/images/team2.jpg" alt="Sarah Smith">
+                            <img src="team2.jpg" alt="Sarah Smith">
                             <h3>Sarah Smith</h3>
                             <p>Painting Expert</p>
                         </div>
 
                         <div class="team-member">
-                            <img src="/images/team3.jpg" alt="Mike Brown">
+                            <img src="team3.jpg" alt="Mike Brown">
                             <h3>Mike Brown</h3>
                             <p>Glass Repair Technician</p>
                         </div>
@@ -39,19 +39,19 @@
 
                     <div class="team-wrapper">
                         <div class="team-member">
-                            <img src="/images/team4.webp" alt="Jessica Lee">
+                            <img src="team4.webp" alt="Jessica Lee">
                             <h3>Jessica Lee</h3>
                             <p>Scratch Removal Specialist</p>
                         </div>
 
                         <div class="team-member">
-                            <img src="/images/team5.jpg" alt="Carlos Rivera">
+                            <img src="team5.jpg" alt="Carlos Rivera">
                             <h3>Carlos Rivera</h3>
                             <p>Interior Repairs Specialist</p>
                         </div>
 
                         <div class="team-member">
-                            <img src="/images/team6.webp" alt="Emily White">
+                            <img src="team6.webp" alt="Emily White">
                             <h3>Emily White</h3>
                             <p>Detailing Specialist</p>
                         </div>
@@ -59,7 +59,7 @@
 
                     <div class="team-wrapper">
                         <div class="team-member">
-                            <img src="/images/team7.jpg" alt="David Johnson">
+                            <img src="team7.jpg" alt="David Johnson">
                             <h3>David Johnson</h3>
                             <p>Lead Technician</p>
                         </div>
